# asistente-horarios-universitarios

./: .gitignore  README.md  app.py  funcional.py  logica.py  models.py  pyproject.toml
lisp/: funciones.lisp
prolog/: reglas.pl
static/css/: style.css
static/js/: app.js  main.js
templates/: index.html
